--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -8,7 +8,7 @@
                 <h1>opal <strong>ADMIN</strong></h1>
               </div>
             </div> 
-            <div id="side-panel-scroll" class="row">     
+            <div id="side-panel-scroll" class="row side-panel-scroll">     
               <!-- Publishing tools -->
               <div class="clearfix">
                 <div class="side-menu-title">
