--- a/templates/alias-add.html
+++ b/templates/alias-add.html
@@ -23,7 +23,7 @@
   									<div class="side-panel-info-sm">
   										<div class="panel-content">
   											<span style="font-size: 23px;vertical-align:middle" class="fa fa-arrow-left" aria-hidden="true"></span>
-  											<h6 class="side-panel-title" style="display:inline-block;margin:0;font-size:14px;"><strong>Back to Tasks/Appts/Documents</strong></h6>
+  											<h6 class="side-panel-title"><strong>Back to Tasks/Appts/Documents</strong></h6>
   										</div>
   									</div>
   								</div>
@@ -36,7 +36,7 @@
                     </span>  
                   </div>  
                 </div>
-                <div class="col-xs-12 col-sm-offset-1 col-sm-5 col-lg-offset-0 col-lg-12">
+                <div class="col-lg-12">
                   <div class="progress progress-striped active">
                     <div class="progress-bar" ng-class="{'progress-bar-success': stepProgress == 100}" role="progressbar" aria-valuenow="{{stepProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{stepProgress}}%">
                     </div>
@@ -226,7 +226,7 @@
                     <div class="side-panel-info-sm">
                       <div class="panel-content">
                         <span style="font-size: 23px;vertical-align:middle" class="fa fa-arrow-left" aria-hidden="true"></span>
-                        <h6 class="side-panel-title" style="display:inline-block;margin:0;font-size:14px;"><strong>Back to Tasks/Appts/Documents</strong></h6>
+                        <h6 class="side-panel-title"><strong>Back to Tasks/Appts/Documents</strong></h6>
                       </div>
                     </div>
                   </div>
