--- a/templates/navbar-menu.html
+++ b/templates/navbar-menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="navigationController">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-controller="navigationController" ng-if="isAuthenticated()">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -10,13 +10,13 @@
     <a class="navbar-brand" ui-sref="home">
     	<img alt="Brand" src="images/opal_logo_transparent.png" height="35" width="35">
     </a>
-    <p class="navbar-text">opal <strong>ADMIN</strong></p>
+    <p class="navbar-text"><a style="color: #fff" ui-sref="home">opal <strong>ADMIN</strong></a></p>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
-      <li class="dropdown" ng-class="{active: currentActivePublishingTool()}">
+      <li class="dropdown" ng-class="{active: currentActivePublishingTool()}" ng-if="isAuthorized([userRoles.admin])">
         <a href="" class="dropdown-toggle"  data-toggle="dropdown">Publishing Tools <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li ui-sref-active="active">
@@ -75,40 +75,40 @@
           </li>
         </ul>
       </li>
-      <li class="dropdown" ng-class="{active: currentActiveAdministration()}">
+      <li class="dropdown" ng-class="{active: currentActiveAdministration()}" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
         <a href="" class="dropdown-toggle"  data-toggle="dropdown">Administration <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li ui-sref-active="active">
+          <li ui-sref-active="active" ng-if="isAuthorized([userRoles.admin])">
           	<a ui-sref="diagnosis-translation" ng-click="closeNav()">
           		<span class="fa fa-stethoscope" aria-hidden="true"></span>
           		Diagnosis Translation
           	</a>
           </li>
-          <li ui-sref-active="active">
+          <li ui-sref-active="active" ng-if="isAuthorized([userRoles.admin])">
           	<a ui-sref="cron" ng-click="closeNav()">
           		<span class="glyphicon glyphicon-time" aria-hidden="true"></span>
           		Cron
           	</a>
           </li>
-          <li ui-sref-active="active">
+          <li ui-sref-active="active" ng-if="isAuthorized([userRoles.admin])">
           	<a ui-sref="patients" ng-click="closeNav()">
           		<span class="fa fa-address-card" aria-hidden="true"></span>
           		Patients
           	</a>
           </li>
-          <li ui-sref-active="active">
+          <li ui-sref-active="active" ng-if="isAuthorized([userRoles.admin, userRoles.registrant])">
           	<a ui-sref="patients-register" ng-click="closeNav()">
           		<span class="fa fa-user-plus" aria-hidden="true"></span>
           		Patient Registration
           	</a>
           </li>
-          <li ui-sref-active="active">
+          <li ui-sref-active="active" ng-if="isAuthorized([userRoles.admin])">
           	<a ui-sref="patient-activity" ng-click="closeNav()">
           		<span class="fa fa-hourglass-half" aria-hidden="true"></span>
           		Patient Activity
           	</a>
           </li>
-          <li ui-sref-active="active">
+          <li ui-sref-active="active" ng-if="isAuthorized([userRoles.admin])">
           	<a ui-sref="users" ng-click="closeNav()">
           		<span class="fa fa-users" aria-hidden="true"></span>
           		Users
@@ -126,7 +126,7 @@
           	</a>
           </li>
           <li>
-          	<a ui-sref="logout" ng-click="closeNav()">
+          	<a ng-click="goToLogout()">
           		<span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
           		Logout
           	</a>
