--- Added mobile support for the above files

--- a/templates/questionnaire-side-menu.html
+++ b/templates/questionnaire-side-menu.html
@@ -1,4 +1,4 @@
-<div ng-controller="sidePanelMenuController">
+<div class="side-navbar" ng-controller="navigationController">
 
   <!-- Logo -->
 	<div class="row side-logo" ng-click="goToHome()">
@@ -6,7 +6,7 @@
       <div class="logo">
         <img style="margin-top: -20px;" class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="130" width="130">
       </div>
-      <h1>opal <strong>ADMIN</strong> <span style="font-size: 20px;" ng-if="devMode">DEV</span></h1>
+      <h1>opal <strong>ADMIN</strong></h1>
     </div>
   </div>
 
