--- a/templates/notification-add.html
+++ b/templates/notification-add.html
@@ -3,50 +3,48 @@
       <div class="clearfix">
         <div class="row">
           <!-- Left side detail view -->
-          <div class="col-md-2">
+          <div class="col-lg-2">
             <!-- Logo -->
-            <div ng-controller="sidePanelMenuController">
+            <div class="side-navbar" ng-controller="navigationController">
               <div class="row side-logo" ng-click="goToHome()">
                 <div class="col-md-12">
                   <div class="logo">
                     <img style="margin-top: -20px;" class="animated rotateIn" src="images/opal_logo_transparent_purple.png" height="130" width="130">
                   </div>
-                  <h1 class="animated fadeIn">opal <strong>ADMIN</strong> <span style="font-size: 20px;" ng-if="devMode">DEV</span></h1>
+                  <h1 class="animated fadeIn">opal <strong>ADMIN</strong></h1>
                 </div>
               </div>   
             </div>  
-            <!-- Back button -->
-						<div class="row side-panel-menu">
-							<div class="col-md-12">
-								<div class="panel-container animated" ng-class="{pulse: hoverBack}" ng-mouseenter="hoverBack=true" ng-mouseleave="hoverBack=false" style="cursor:pointer;" ng-click="goBack()">
-									<div class="side-panel-info-sm">
-										<div class="panel-content">
-											<span style="font-size: 23px;vertical-align:middle" class="fa fa-arrow-left" aria-hidden="true"></span>
-											<h6 class="side-panel-title" style="display:inline-block;margin:0;font-size:14px;"><strong>Back to Notifications</strong></h6>
-										</div>
-									</div>
-								</div>
-							</div>
-            </div>
-            <!-- Summary -->
             <div class="summary-fix">
-              <div class="row">
-                <div class="side-menu-title">
+              <!-- Back button -->
+  						<div class="row side-panel-menu">
+  							<div class="col-xs-12 col-sm-5 col-lg-12">
+  								<div class="panel-container animated" ng-class="{pulse: hoverBack}" ng-mouseenter="hoverBack=true" ng-mouseleave="hoverBack=false" style="cursor:pointer;" ng-click="goBack()">
+  									<div class="side-panel-info-sm">
+  										<div class="panel-content">
+  											<span style="font-size: 23px;vertical-align:middle" class="fa fa-arrow-left" aria-hidden="true"></span>
+  											<h6 class="side-panel-title"><strong>Back to Notifications</strong></h6>
+  										</div>
+  									</div>
+  								</div>
+  							</div>
+                <!-- Summary -->
+                <div class="side-menu-title col-lg-12">
                   <div class="horz-line" style="height: 16px; text-align: center">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <h2>Summary</h2>
                     </span>  
                   </div>  
                 </div>
-              </div>
-              <div class="row">
-                <div class="progress progress-striped active">
-                  <div class="progress-bar" ng-class="{'progress-bar-success': stepProgress == 100}" role="progressbar" aria-valuenow="{{stepProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{stepProgress}}%">
+                <div class="col-lg-12">
+                  <div class="progress progress-striped active">
+                    <div class="progress-bar" ng-class="{'progress-bar-success': stepProgress == 100}" role="progressbar" aria-valuenow="{{stepProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{stepProgress}}%">
+                    </div>
                   </div>
                 </div>
               </div>
 
-              <uib-accordion>
+              <uib-accordion class="side-navbar">
                 <!-- SECTION: Type -->
                 <div uib-accordion-group is-open="type.open" class="panel-container summary-box" is-disabled="!newNotification.type">
                   <uib-accordion-heading>
@@ -111,10 +109,10 @@
             </div>
           </div>
           <!-- Right side view -->
-          <div class="col-md-10 animated fadeInRight">
+          <div class="col-xs-12 col-lg-10 animated fadeInRight">
             <div class="row main-title">
               <!-- Page title -->
-              <div class="col-md-8 title-content">
+              <div class="col-xs-12 col-md-8 title-content">
                 <span class="glyphicon glyphicon-plus"></span>
                 <h1><strong>Add Notification</strong></h1>
               </div>
@@ -128,120 +126,144 @@
                   <span><strong>Add Notification</strong></span>
                 </span>
               </div>
-            </div>   
-            <!-- SECTION: Type -->
-            <div class="row">
-              <div class="col-md-12 side-menu-title">
-                <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
-                  <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
-                    <h2>Type</h2>
-                  </span>  
-                </div>  
-              </div>
-            </div>   
-            <div class="row">
-              <div class="col-md-12">
-                <p style="margin-bottom: 10px;">
-                  <span style="color:#d9534f"><strong>Required field:</strong></span>
-                  Please select the notification type.
-                </p>
-              </div>
-            </div>    
-            <div class="row">
-              <div ng-repeat="type in notificationTypes" class="col-md-2"> 
-                <div class="panel-container animated" style="cursor:pointer;" ng-class="{pulse: hover, active: newNotification.type == type.id}" ng-click="typeUpdate(type.id)" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
-                  <div class="panel-info" ng-class="{active: newNotification.type == type.id}">
-                    <div class="panel-content" style="text-align:center">
-                      <span style="font-size:30px;" class="glyphicon glyphicon-bell"></span>
-                      <div class="option-panel-title">{{type.name}}</div>
+            </div>  
+            <div class="row mobile-side-panel-menu">
+              <div class="back-menu col-xs-12 col-sm-5 col-lg-12">
+                <div class="panel-container animated" ng-class="{pulse: hoverBack}" ng-mouseenter="hoverBack=true" ng-mouseleave="hoverBack=false" style="cursor:pointer;" ng-click="goBack()">
+                  <div class="side-panel-info-sm">
+                    <div class="panel-content">
+                      <span style="font-size: 23px;vertical-align:middle" class="fa fa-arrow-left" aria-hidden="true"></span>
+                      <h6 class="side-panel-title"><strong>Back to Notifications</strong></h6>
                     </div>
                   </div>
                 </div>
               </div>
-            </div> 
-            <!-- SECTION: Title & Message -->
-            <div class="row animated" ng-class="{fadeInUp: title_message.show}" ng-if="title_message.show">
-              <div class="col-md-12 side-menu-title">
-                <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
-                  <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="fa fa-dot-circle-o"></span>
-                    <h2>Title & Message</h2>
+              <div class="mobile-summary col-xs-12 col-sm-offset-1 col-sm-6" ng-if="!checkForm()">
+                <div class="summary-title" style="text-align: right; margin-bottom: 5px;">
+                  <span style="padding: 0 10px;">
+                    <h2>Step {{numOfCompletedSteps}} of {{stepTotal}} Completed</h2>
                   </span>  
                 </div>  
-              </div>
-            </div>   
-            <div class="row animated" ng-class="{fadeInUp: title_message.show}" ng-if="title_message.show">
-              <div class="col-md-12">
-                <p style="margin-bottom: 10px;">
-                  <span style="color:#d9534f"><strong>Required field:</strong></span>
-                  Please assign an english and french title and message.
-                </p>
-              </div>
-            </div>  
-            <div class="row animated" ng-class="{fadeInUp: title_message.show}" ng-if="title_message.show"> 
-              <div class="col-md-6">
-                <div class="panel" ng-class="(newNotification.name_EN && newNotification.description_EN) ? 'panel-success': 'panel-danger'">
-                  <div class="panel-heading"><strong>English</strong>
-                    <span ng-hide="newNotification.name_EN && newNotification.description_EN" style="float:right"><em>Incomplete</em></span>
-                    <span ng-show="newNotification.name_EN && newNotification.description_EN" style="float:right"><em>Complete</em></span>
+                <div class="progress progress-striped active">
+                  <div class="progress-bar" ng-class="{'progress-bar-success': stepProgress == 100}" role="progressbar" aria-valuenow="{{stepProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{stepProgress}}%">
                   </div>
-                  <div class="panel-body">
-                    <div class="row">
-                      <div class="col-md-2">
-                        <div style="font-size:18px; text-align:right;">Title</div>
-                      </div>
-                      <div class="col-md-10">
-                        <div class="form-group">
-                          <input class="form-control" type="text" ng-model="newNotification.name_EN" ng-change="titleMessageUpdate()" placeholder="English Title" required="required">
-                        </div>
-                      </div>
-                    </div>    
-                    <div class="row">
-                      <div class="col-md-2">
-                        <div style="font-size:18px; text-align:right;">Message</div>
-                      </div>
-                      <div class="col-md-10">
-                        <div class="form-group">
-                          <textarea class="form-control" rows="5" ng-model="newNotification.description_EN" ng-change="titleMessageUpdate()" placeholder="English Message" required="required"></textarea>
-                        </div>
+                </div>
+              </div>
+              <div class="mobile-summary col-xs-12 col-sm-offset-2 col-sm-5" ng-if="checkForm()">
+                <div class="panel-container">
+                  <a href="" ng-click="submitNotification()" class="btn btn-md item-button-success animated" ng-class="{pulse: hoverV}" ng-mouseenter="hoverV=true" ng-mouseleave="hoverV=false" ng-if="checkForm()" style="width: 100%;">
+                    <span style="font-size: 20px;"><strong>Submit Notification</strong></span>
+                  </a>
+                </div>
+              </div> 
+            </div> 
+            <div class="section-content">
+              <!-- SECTION: Type -->
+              <div class="row">
+                <div class="col-xs-12 side-menu-title">
+                  <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
+                    <span style="background-color:#e6edfa; padding: 0 10px;">
+                      <span class="fa fa-dot-circle-o"></span>
+                      <h2>Type</h2>
+                    </span>  
+                  </div>  
+                </div>
+              </div>   
+              <div class="row">
+                <div class="col-xs-12">
+                  <p style="margin-bottom: 10px;">
+                    <span style="color:#d9534f"><strong>Required field:</strong></span>
+                    Please select the notification type.
+                  </p>
+                </div>
+              </div>    
+              <div class="row">
+                <div ng-repeat="type in notificationTypes" class="col-xs-4 col-sm-3 col-lg-2"> 
+                  <div class="panel-container animated" style="cursor:pointer;" ng-class="{pulse: hover, active: newNotification.type == type.id}" ng-click="typeUpdate(type.id)" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
+                    <div class="panel-info" ng-class="{active: newNotification.type == type.id}">
+                      <div class="panel-content" style="text-align:center">
+                        <span style="font-size:30px;" class="glyphicon glyphicon-bell"></span>
+                        <div class="option-panel-title">{{type.name}}</div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div> 
-              <div class="col-md-6">
-                <div class="panel" ng-class="(newNotification.name_FR && newNotification.description_FR) ? 'panel-success': 'panel-danger'">
-                  <div class="panel-heading"><strong>Français</strong>
-                    <span ng-hide="newNotification.name_FR && newNotification.description_FR" style="float:right"><em>Incomplete</em></span>
-                    <span ng-show="newNotification.name_FR && newNotification.description_FR" style="float:right"><em>Complete</em></span>
-                  </div>
-                  <div class="panel-body">
-                    <div class="row">
-                      <div class="col-md-2">
-                        <div style="font-size:18px; text-align:right;">Titre</div>
-                      </div>
-                      <div class="col-md-10">
-                        <div class="form-group">
-                          <input class="form-control" type="text" ng-model="newNotification.name_FR" ng-change="titleMessageUpdate()" placeholder="Titre Français" required="required">
+              <!-- SECTION: Title & Message -->
+              <div class="row animated" ng-class="{fadeInUp: title_message.show}" ng-if="title_message.show">
+                <div class="col-xs-12 side-menu-title">
+                  <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
+                    <span style="background-color:#e6edfa; padding: 0 10px;">
+                      <span class="fa fa-dot-circle-o"></span>
+                      <h2>Title & Message</h2>
+                    </span>  
+                  </div>  
+                </div>
+              </div>   
+              <div class="row animated" ng-class="{fadeInUp: title_message.show}" ng-if="title_message.show">
+                <div class="col-xs-12">
+                  <p style="margin-bottom: 10px;">
+                    <span style="color:#d9534f"><strong>Required field:</strong></span>
+                    Please assign an english and french title and message.
+                  </p>
+                </div>
+              </div>  
+              <div class="row animated" ng-class="{fadeInUp: title_message.show}" ng-if="title_message.show"> 
+                <div class="col-xs-12 col-md-6">
+                  <div class="panel" ng-class="(newNotification.name_EN && newNotification.description_EN) ? 'panel-success': 'panel-danger'">
+                    <div class="panel-heading"><strong>English</strong>
+                      <span ng-hide="newNotification.name_EN && newNotification.description_EN" style="float:right"><em>Incomplete</em></span>
+                      <span ng-show="newNotification.name_EN && newNotification.description_EN" style="float:right"><em>Complete</em></span>
+                    </div>
+                    <div class="panel-body form-horizontal">
+                      <div class="form-group">
+                        <label class="control-label col-xs-12 col-lg-2">
+                          Title
+                        </label>
+                        <div class="col-xs-12 col-lg-10">
+                          <input class="form-control" type="text" ng-model="newNotification.name_EN" ng-change="titleMessageUpdate()" placeholder="English Title" required="required">
+                        </div>
+                      </div>    
+                      <div class="form-group">
+                        <label class="control-label col-xs-12 col-lg-2">
+                          Message
+                        </label>
+                        <div class="col-xs-12 col-lg-10">
+                          <textarea class="form-control" rows="5" ng-model="newNotification.description_EN" ng-change="titleMessageUpdate()" placeholder="English Message" required="required"></textarea>
                         </div>
                       </div>
-                    </div>    
-                    <div class="row">
-                      <div class="col-md-2">
-                        <div style="font-size:18px; text-align:right;">Message</div>
-                      </div>
-                      <div class="col-md-10">
-                        <div class="form-group">
+                    </div>
+                  </div>
+                </div> 
+                <div class="col-xs-12 col-md-6">
+                  <div class="panel" ng-class="(newNotification.name_FR && newNotification.description_FR) ? 'panel-success': 'panel-danger'">
+                    <div class="panel-heading"><strong>Français</strong>
+                      <span ng-hide="newNotification.name_FR && newNotification.description_FR" style="float:right"><em>Incomplete</em></span>
+                      <span ng-show="newNotification.name_FR && newNotification.description_FR" style="float:right"><em>Complete</em></span>
+                    </div>
+                    <div class="panel-body form-horizontal">
+                      <div class="form-group">
+                        <label class="control-label col-xs-12 col-lg-2">
+                          Titre
+                        </label>
+                        <div class="col-xs-12 col-lg-10">
+                          <input class="form-control" type="text" ng-model="newNotification.name_FR" ng-change="titleMessageUpdate()" placeholder="Titre Français" required="required">
+                        </div>
+                      </div>    
+                      <div class="form-group">
+                        <label class="control-label col-xs-12 col-lg-2">
+                          Message
+                        </label>
+                        <div class="col-xs-12 col-lg-10">
                           <textarea class="form-control" rows="5" ng-model="newNotification.description_FR" ng-change="titleMessageUpdate()" placeholder="Message Français" required="required"></textarea>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
-              </div>    
+                </div>    
+              </div>
+              <!-- END SECTION -->      
             </div>
-            <!-- END SECTION -->      
           </div>
         </div>
       </div>
